--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/eslint": "8.4.5",
     "@types/node": "18.0.6",
+    "@types/prettier": "^2.6.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "eslint": "8.20.0",
