--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/prettier": "^2.6.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
     "eslint": "8.20.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.2.2",
