importの順番のルール化や使ってないimportがあれば警告を出す

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,11 +21,47 @@
     "import",
     "jsx-a11y",
     "react",
-    "react-hooks"
+    "react-hooks",
+    "unused-imports"
   ],
   "rules": {
     "semi": ["error", "always"],
     "react/no-unescaped-entities": 0,
+    "unused-imports/no-unused-imports": "error",
+    "unused-imports/no-unused-vars": [
+      "warn",
+      {
+        "vars": "all",
+        "varsIgnorePattern": "^_",
+        "args": "after-used",
+        "argsIgnorePattern": "^_"
+      }
+    ],
+    "import/order": [
+      "error",
+      {
+        "groups": [
+          "builtin",
+          "external",
+          "parent",
+          "sibling",
+          "index",
+          "object",
+          "type"
+        ],
+        // pathGroups: [
+        //   {
+        //     pattern: "@alias/**",
+        //     group: "parent",
+        //     position: "before",
+        //   },
+        // ],
+        "alphabetize": {
+          "order": "asc"
+        },
+        "newlines-between": "always"
+      }
+    ],
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
     "lines-between-class-members": [
