--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "autoprefixer": "^10.4.8",
     "eslint": "8.20.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.2.2",
@@ -31,7 +32,9 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "postcss": "^8.4.14",
     "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.7",
     "typescript": "4.7.4"
   }
 }
