--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
+    "prisma": "^4.1.1",
     "tailwindcss": "^3.1.7",
     "typescript": "4.7.4"
   }
