--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.1.1",
+    "babel-plugin-superjson-next": "^0.4.3",
     "next": "12.2.2",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "superjson": "^1.9.1"
   },
   "devDependencies": {
     "@types/eslint": "8.4.5",
