--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.1.1",
+    "axios": "^0.27.2",
     "babel-plugin-superjson-next": "^0.4.3",
     "next": "12.2.2",
     "next-auth": "^4.10.3",
